--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@ h1, h2, h3 {
 }
 
 body {
+  font-family: 'Roboto Slab', sans-serif;
+
   background-image: linear-gradient(135deg, #c4ccc5 41.67%, #b2bdde 41.67%, #b2bdde 50%, #c4ccc5 50%, #c4ccc5 91.67%, #b2bdde 91.67%, #b2bdde 100%);
   background-size: 16.97px 16.97px;
 }
@@ -25,7 +27,7 @@ body {
 .algorithms-link {
   font-size: 25px;
   font-weight: bold;
-  color: #012fad;
+  color: #737373;
   text-decoration: none;
 }
 
@@ -35,6 +37,7 @@ body {
   justify-content: space-between;
   align-items: center;
   width: 550px;
+  margin: 10px;
   padding: 20px;
 
   background-color: #F8F8FF;
@@ -144,8 +147,8 @@ body {
 
 .back-button {
   position: absolute;
-  top: 161px;
-  left: 420px;
+  top: 171px;
+  left: 430px;
 
   height: 50px;
   font-size: 30px;
@@ -166,4 +169,16 @@ body {
 
 .back-button:active {
   color: #012fad;
+}
+
+.screen {
+  width: 550px;
+  margin: 10px;
+  padding: 20px;
+
+  word-break: break-all;
+
+  font-family: 'Roboto Mono', monospace;
+
+  border: 1px solid #7285b9;
 }
