--- a/css/style.css
+++ b/css/style.css
@@ -24,11 +24,20 @@ body {
   margin: 0;
 }
 
+.algorithms-list {
+  list-style: none;
+}
+
 .algorithms-link {
   font-size: 25px;
   font-weight: bold;
   color: #737373;
   text-decoration: none;
+}
+
+.algorithms-link:hover {
+  color: #969191;
+  border-bottom: 3px solid #969191;
 }
 
 .algorithm {
